--- a/graph.tex
+++ b/graph.tex
@@ -2,7 +2,7 @@
 
 \title{Clustering scientific articles}
 \author{Jonas Arnfred, \emph{School of Computer and Communication 
-Sciences, EPFL}\\Email: jonas@ifany}
+Sciences, EPFL}\\Email: jonas.arnfred@epfl.ch}
 
 \usepackage{natbib}
 \usepackage{hyperref}
